--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,52 +1,51 @@
-[tool.poetry]
+[project]
 name = "mergify_cli"
-version = "0.0.0"
+dynamic = ["version"]
 description = "Mergify CLI is a tool that automates the creation and management of stacked pull requests on GitHub"
-authors = ["Mehdi Abaakouk <sileht@mergify.com>"]
+authors = [{ name = "Mehdi Abaakouk", email = "sileht@mergify.com" }]
+requires-python = ">=3.13"
 readme = "README.md"
-license = "Apache License"
+license = "Apache-2.0"
+dependencies = [
+    "httpx==0.28.1",
+    "rich==14.2.0",
+    "aiofiles==25.1.0",
+    "click==8.3.1",
+    "click-default-group==1.2.4",
+    "opentelemetry-exporter-otlp-proto-http==1.39.0",
+    "opentelemetry-sdk==1.39.0",
+    "tenacity==9.1.2",
+    "pyyaml==6.0.3",
+    "pydantic==2.12.5",
+]
+
+[project.scripts]
+mergify = "mergify_cli.cli:main"
+
+[dependency-groups]
+dev = [
+    "mypy==1.18.2",
+    "mypy-extensions==1.1.0",
+    "ruff==0.14.8",
+    "pytest==9.0.2",
+    "poethepoet==0.38.0",
+    "pytest-asyncio==1.3.0",
+    "respx==0.22.0",
+    "types-aiofiles==25.1.0.20251011",
+    "types-click==7.1.8",
+    "types-click-default-group==1.2.0.20250513",
+    "types-pyyaml==6.0.12.20250915",
+    "anys==0.3.1",
+    "responses==0.25.8",
+]
 
 [build-system]
-requires = ["poetry-core", "poetry-dynamic-versioning"]
-build-backend = "poetry_dynamic_versioning.backend"
+requires = ["hatchling", "hatch-vcs"]
+build-backend = "hatchling.build"
 
-[tool.poetry-dynamic-versioning]
-enable = true
-vcs = "git"
-dirty = true
-pattern = "default-unprefixed"
-
-[tool.poetry.dependencies]
-python = ">=3.13"
-httpx = ">=0.20.0"
-rich = ">=10.11.0"
-aiofiles = ">=23.2.1,<26.0.0"
-click = "^8.1.7"
-click-default-group = "^1.2.4"
-opentelemetry-exporter-otlp-proto-http = "^1.38.0"
-opentelemetry-sdk = "^1.38.0"
-tenacity = "^9.1.2"
-pyyaml = "^6.0.3"
-pydantic = "^2.11.9"
-
-
-[tool.poetry.group.dev.dependencies]
-mypy = {version = ">=0.930"}
-mypy-extensions = "^1.0.0"
-ruff = "0.14.8"
-pytest = {version = ">=6.2.5"}
-poethepoet = ">=0.38,<0.39"
-pytest-asyncio = ">=1.3.0,<2.0.0"
-respx = ">=0.20.2,<0.23.0"
-types-aiofiles = ">=23.2.0.20240106,<26.0.0.0"
-types-click = "^7.1.8"
-types-click-default-group = "^1.2.0.0"
-types-pyyaml = "6.0.12.20250915"
-anys = "^0.3.1"
-responses = "^0.25.6"
-
-[tool.poetry.scripts]
-mergify = 'mergify_cli.cli:main'
+[tool.hatch.version]
+source = "vcs"
+fallback-version = "0"
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
