fix: use locked instead of frozen
 Frozen blindly install lock file without looking at the pyproject.toml
 This is nice for docker images, but for CI we should use locked.
 It checked the pyproject.toml and the lock file are in sync before
 installing the dependencies.

Change-Id: I4d107f359df9567dd30ff5554b68198e6a19de99

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Linters
         shell: bash
-        run: uv run --frozen poe linters
+        run: uv run --locked poe linters
 
   test:
     timeout-minutes: 5
@@ -49,7 +49,7 @@ jobs:
         env:
           _MERGIFY_TEST_NEW_FLAKY_DETECTION: "true"
           PYTHONUTF8: "${{ matrix.os == 'windows-2025' && 1 || 0 }}"
-        run: uv run --frozen poe test
+        run: uv run --locked poe test
 
       - name: Build
         shell: bash
